tests/snapshots/construction_hash__construction_hash_invalid_format_signed.snap
---
source: tests/construction_hash.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Signed transaction must have one of: payment, stake_delegation",
        ),
    ),
)
