tests/snapshots/construction_hash__construction_hash_valid_signed_delegation.snap
---
source: tests/construction_hash.rs
expression: response
---
Ok(
    TransactionIdentifierResponse {
        transaction_identifier: TransactionIdentifier {
            hash: "5JtokakbwjsWKpgvrh3BcwnepjmrfL81SoDuUDbPK9N8sDEEbBMN",
        },
        metadata: None,
    },
)
