tests/snapshots/construction_hash__construction_hash_valid_signed_payment.snap
---
source: tests/construction_hash.rs
expression: response
---
Ok(
    TransactionIdentifierResponse {
        transaction_identifier: TransactionIdentifier {
            hash: "5JtWZ3zFdhKLmcgSejGpXrUDMu11Fp1vqBGk6eKQrVUp4bJm3EUC",
        },
        metadata: None,
    },
)
